--- a/wordpress/wp-content/languages/ru_RU.po
+++ b/wordpress/wp-content/languages/ru_RU.po
@@ -2,13 +2,17 @@
 # This file is distributed under the same license as the Development package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2015-12-10 13:58:37+0000\n"
+"PO-Revision-Date: 2015-12-14 14:12+0200\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-"X-Generator: GlotPress/1.0-alpha-1100\n"
+"X-Generator: Poedit 1.8.5\n"
 "Project-Id-Version: Development\n"
+"POT-Creation-Date: \n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ru_RU\n"
 
 #. translators: 'rtl' or 'ltr'. This sets the text direction for WordPress.
 #: wp-includes/locale.php:201
@@ -1736,12 +1740,12 @@ msgstr "Просмотреть"
 #: wp-includes/link-template.php:2487
 msgctxt "previous post"
 msgid "Previous"
-msgstr "Назад"
+msgstr ""
 
 #: wp-includes/link-template.php:2488
 msgctxt "next post"
 msgid "Next"
-msgstr "Далее"
+msgstr ""
 
 #: wp-includes/taxonomy.php:536
 msgid "No categories found."
